--- a/package.json
+++ b/package.json
@@ -1,52 +1,52 @@
 {
-  "name": "todo-app",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "dev": "concurrently --kill-others \"npm run vue:serve\" \"npm run json:server\"",
-    "json:server": "json-server --watch src/data/todos.json",
-    "vue:serve": "vue-cli-service serve && json:server"
-  },
-  "dependencies": {
-    "autoprefixer": "^10",
-    "core-js": "^3.8.3",
-    "postcss": "^8",
-    "tailwindcss": "^3",
-    "vue": "^2.7.8",
-    "vue-fragment": "^1.6.0",
-    "vue-router": "^4.1.3",
-    "vuex": "^4.0.2"
-  },
-  "devDependencies": {
-    "@babel/core": "^7.12.16",
-    "@babel/eslint-parser": "^7.12.16",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
-    "vue-cli-plugin-tailwind": "~3.0.0",
-    "vue-template-compiler": "^2.6.14"
-  },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead"
-  ]
+	"name": "todo-app",
+	"version": "0.1.0",
+	"private": true,
+	"scripts": {
+		"build": "vue-cli-service build",
+		"json:server": "json-server --watch src/data/todos.json",
+		"vue:serve": "vue-cli-service serve && json:server",
+		"lint": "vue-cli-service lint",
+		"dev": "concurrently --kill-others \"npm run vue:serve\" \"npm run json:server\""
+	},
+	"dependencies": {
+		"autoprefixer": "^10",
+		"core-js": "^3.8.3",
+		"postcss": "^8",
+		"tailwindcss": "^3",
+		"vue": "^2.7.8",
+		"vue-fragment": "^1.6.0",
+		"vue-router": "^4.1.3",
+		"vuex": "^4.0.2"
+	},
+	"devDependencies": {
+		"@babel/core": "^7.12.16",
+		"@babel/eslint-parser": "^7.12.16",
+		"@vue/cli-plugin-babel": "~5.0.0",
+		"@vue/cli-plugin-eslint": "~5.0.0",
+		"@vue/cli-service": "~5.0.0",
+		"eslint": "^7.32.0",
+		"eslint-plugin-vue": "^8.0.3",
+		"vue-cli-plugin-tailwind": "~3.0.0",
+		"vue-template-compiler": "^2.6.14"
+	},
+	"eslintConfig": {
+		"root": true,
+		"env": {
+			"node": true
+		},
+		"extends": [
+			"plugin:vue/essential",
+			"eslint:recommended"
+		],
+		"parserOptions": {
+			"parser": "@babel/eslint-parser"
+		},
+		"rules": {}
+	},
+	"browserslist": [
+		"> 1%",
+		"last 2 versions",
+		"not dead"
+	]
 }
