add: 📦 dependency lodash-es
This is used in context for the registerBaseComponents.js

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"autoprefixer": "^10",
 		"core-js": "^3.8.3",
+		"lodash-es": "^4.17.21",
 		"postcss": "^8",
 		"tailwindcss": "^3",
 		"vue": "^2.7.8",
