--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
 		"autoprefixer": "^10",
 		"core-js": "^3.8.3",
 		"lodash-es": "^4.17.21",
+		"node-sass": "^7.0.1",
 		"postcss": "^8",
+		"sass-loader": "^13.0.2",
 		"tailwindcss": "^3",
 		"vue": "^2.7.8",
 		"vue-fragment": "^1.6.0",
